# rust-console-projects

./: .gitignore  README.md
cat/: Cargo.toml
cat/src/: lib.rs  main.rs
cat/tests/: cli.rs
cat/tests/expected/: number_non_blank_lines  number_non_blank_lines_expected
cdc-mongodb/: .env.example  Cargo.toml  docker-compose.yml  schema.puml
cdc-mongodb/commands/: command
cdc-mongodb/src/: change_stream_handlers.rs  kafka_producer.rs  main.rs  models.rs  mongo_connection.rs
clap-examples/clap-without-parser/: Cargo.toml
clap-examples/clap-without-parser/src/: main.rs
echo/: Cargo.toml  create-files.sh
echo-clap/: Cargo.toml
echo-clap/src/: main.rs
echo-clap/tests/: cli.rs
echo-clap/tests/expected/: new_line  no_new_line
echo-std/: Cargo.toml
echo-std/src/: main.rs
echo/src/: main.rs
echo/tests/: cli_test.rs
regex-once/: Cargo.toml
regex-once/src/: main.rs
rest-backed-by-postgres/: .env.example  Cargo.toml  docker-compose.yml  schema.puml
rest-backed-by-postgres/sqls/: create_movies.sql
rest-backed-by-postgres/src/: db_access.rs  handlers.rs  main.rs  routes.rs
rest-db-factory/: Cargo.toml
rest-db-factory/src/: main.rs
rest-db-factory/src/db/: db_access_trait.rs  mod.rs  postgres_db.rs
rest-db-factory/src/handlers/: mod.rs
rest-db-factory/src/models/: mod.rs  movie.rs
rest-db-factory/src/routes/: mod.rs
rest-db-factory/src/state/: mod.rs
rest-db-factory/src/utils/: mod.rs
tail/: Cargo.toml
tail/src/: lib.rs  main.rs
tail/tests/files/: 10-words  words
wc/: Cargo.toml
wc/src/: lib.rs  main.rs
