[package]
name = "cdc-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.0"
tokio = "1.35.1"
futures = "0.3.30"
serde = "1.0.193"
dotenv = "0.15.0"
serde_json = "1.0.108"
rdkafka = "0.36.0"