[package]
name = "rest-db-factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Actix web framework and run-time
actix-web = "4.1.0"
actix-rt = "2.7.0"

# Environment access
dotenv = "0.15.0"

# Database access
sqlx = {version = "0.7.3", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}


# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }

# Other utils
chrono = {version = "0.4.22", features = ["serde"]}
